--- a/core/styles/style.scss
+++ b/core/styles/style.scss
@@ -47,7 +47,7 @@
   }
 
   &#quote-format > form {
-    height: 298.7px;
+    height: 303.7px;
     transition: height 0.15s ease-in-out 0s;
   }
 
@@ -63,6 +63,10 @@
   #quickActions-textArea {
     resize: none;
     overflow: hidden;
+  }
+
+  .quickActions-slider {
+    margin-top: 10px;
   }
 
   &#quickActions-mu-users {
