--- a/core/styles/style.scss
+++ b/core/styles/style.scss
@@ -8,6 +8,12 @@
   }
 }
 
+.quickActions-contextMenu-submenu {
+  div[class*='itemSubMenu-'] {
+    white-space: initial;
+  }
+}
+
 .quickActions-icon {
   display: inline;
 
