Add dynamic classes and support for 'Bookmoji'

--- a/core/styles/style.scss
+++ b/core/styles/style.scss
@@ -3,8 +3,13 @@
   transition: opacity .3s ease;
 
   &.disabled {
+    color: white !important;
     opacity: .3 !important;
     pointer-events: none !important;
+  }
+
+  > span {
+    transition: color .1s ease-in-out;
   }
 }
 
