--- a/core/styles/style.scss
+++ b/core/styles/style.scss
@@ -31,6 +31,18 @@
   padding-top: 10px;
 }
 
+.quickActions-contextMenu-submenu {
+  .quickActions-contextMenu-icon {
+    opacity: .6;
+  }
+
+  &[class*='selected-'] {
+    .quickActions-contextMenu-icon {
+      opacity: 1;
+    }
+  }
+}
+
 .quickActions-icon {
   display: inline;
 
