Replace GitHub endpoints with personal API server
* Unofficial plug-ins that used to be hardcoded to a single file now get fetched dynamically from my trusty API server.
* A styling issue where the label of image buttons would extend all the way outside of a particular context menu has since been fixed in this patch.
* 90% of the endpoints previously found under GitHub now point to my API server for ease-of-access and real-time updates.
* Bump version number from '2.2.6' to '2.2.7'.

--- a/core/styles/style.scss
+++ b/core/styles/style.scss
@@ -19,6 +19,9 @@
   }
 
   > span {
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    overflow: hidden;
     transition: color .1s ease-in-out;
   }
 }
