Add support for more settings / minor adjustments

--- a/core/styles/style.scss
+++ b/core/styles/style.scss
@@ -99,6 +99,11 @@
         margin-bottom: 10px;
       }
 
+      .verified {
+        color: #43b581;
+        margin-left: 5px;
+      }
+
       &-container {
         display: flex;
         justify-content: space-between;
